# sinecrunch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  sinecrunch.hpp
benchmark/: .gitignore  BM_sinecrunch.cpp  CMakeLists.txt  build.sh  main.cpp  run.sh  setup.sh
scripts/: setup_bench.sh
