###############################################################################
#                                CMAKE VERSION                                #
###############################################################################
CMAKE_MINIMUM_REQUIRED (VERSION 3.9.2)




###############################################################################
#                                   PROJECT                                   #
###############################################################################
PROJECT (sinecrunch 
		VERSION 1.0.0 
		LANGUAGES CXX 
		DESCRIPTION "A C++ repository to approximate sinusoids.")




###############################################################################
#                                  LIBRARY                                    #
###############################################################################
ADD_LIBRARY (sinecrunch INTERFACE)




###############################################################################
#                                  HEADERS                                    #
###############################################################################
TARGET_INCLUDE_DIRECTORIES (sinecrunch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

